Added the same plugins as littleproxy have